--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class=" appHead">
-    <h1>Spending Planner</h1>
+    <h1>Money Man</h1>
   </div>
   <div id="breakpoint" class="splitCol">
   <div class="grid-wrapper" id="inputGrid">
