--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
           <label class="outputLabel" id="netYr">$0.00</label>
         </div>
       </div>
+
+      <div class="grid-wrapper" id="chartGrid">
+        <svg viewBox="-250 -250 500 500" xmlns="http://www.w3.org/2000/svg" id="pieChart"></svg>
+      </div>
+
+      <div class="grid-wrapper" id="moneyMan">
+        <img id="themm" src="./content/img/icon.png" alt="Money Man Icon "/>
+      </div>
     </div>
     <script src="./renderer.js"></script>
   </body>
