Setup chart data
Connected expense data with pie chart data

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
       </div>
 
       <div class="grid-wrapper" id="chartGrid">
-        <svg viewBox="-250 -250 500 500" xmlns="http://www.w3.org/2000/svg" id="pieChart"></svg>
+        <div class="chartContent"></div>
       </div>
 
       <div class="grid-wrapper" id="moneyMan">
-        <img id="themm" src="./content/img/icon.png" alt="Money Man Icon "/>
+        <img id="themm" src="./content/img/icon.png" alt="Money Man Icon " />
       </div>
     </div>
     <script src="./renderer.js"></script>
