Finished details switcher
Output details checkboxes work and hide content as expected

Added pie chart hover effect too

--- a/index.html
+++ b/index.html
@@ -86,34 +86,35 @@
       <div class="grid-wrapper" id="outputGrid">
         <div class="outputWk">
           <h3 id="wkLabel">Weekly</h3>
-          <label class="textLabel">Gross : </label>
-          <label class="outputLabel" id="grossWk">$0.00</label>
-          <label class="textLabel">Gross After Tax: </label>
-          <label class="outputLabel" id="grossWkAT">$0.00</label>
-          <label class="textLabel">Net : </label>
-          <label class="outputLabel" id="netWk">$0.00</label>
+          <label class="textLabel lblGross">Gross : </label>
+          <label class="outputLabel lblGross" id="grossWk">$0.00</label>
+          <label class="textLabel lblGrAT">Gross After Tax: </label>
+          <label class="outputLabel lblGrAT" id="grossATWk">$0.00</label>
+          <label class="textLabel lblNet">Net : </label>
+          <label class="outputLabel lblNet" id="netWk">$0.00</label>
         </div>
         <div class="outputMn hide">
           <h3 id="mnLabel">Monthly</h3>
-          <label class="textLabel">Gross : </label>
-          <label class="outputLabel" id="grossMn">$0.00</label>
-          <label class="textLabel">Gross After Tax : </label>
-          <label class="outputLabel" id="grossMnAT">$0.00</label>
-          <label class="textLabel">Net : </label>
-          <label class="outputLabel" id="netMn">$0.00</label>
+          <label class="textLabel lblGross">Gross : </label>
+          <label class="outputLabel lblGross" id="grossMn">$0.00</label>
+          <label class="textLabel lblGrAT">Gross After Tax : </label>
+          <label class="outputLabel lblGrAT" id="grossATMn">$0.00</label>
+          <label class="textLabel lblNet">Net : </label>
+          <label class="outputLabel lblNet" id="netMn">$0.00</label>
         </div>
         <div class="outputYr hide">
           <h3 id="yrLabel">Yearly</h3>
-          <label class="textLabel">Gross : </label>
-          <label class="outputLabel" id="grossYr">$0.00</label>
-          <label class="textLabel">Gross After Tax : </label>
-          <label class="outputLabel" id="grossYrAT">$0.00</label>
-          <label class="textLabel">Net : </label>
-          <label class="outputLabel" id="netYr">$0.00</label>
+          <label class="textLabel lblGross">Gross : </label>
+          <label class="outputLabel lblGross" id="grossYr">$0.00</label>
+          <label class="textLabel lblGrAT">Gross After Tax : </label>
+          <label class="outputLabel lblGrAT" id="grossATYr">$0.00</label>
+          <label class="textLabel lblNet">Net : </label>
+          <label class="outputLabel lblNet" id="netYr">$0.00</label>
         </div>
       </div>
 
       <div class="grid-wrapper" id="chartGrid">
+        <h3>Expense Breakdown</h3>
         <div class="chartContent"></div>
       </div>
 
