style : change head font and output detail spacing
Added padding around output detail checkboxes
Changed font of app head

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           <option value="all">All</option>
         </select>
         <div class="singleCol">
-          <label class="textLabel" for="outputDets">Output Details : </label>
+          <label class="textLabel" for="detailChoices">Output Details : </label>
         </div>
         <div class="singleCol">
-          <div class="trisplitCol" id="outputDets">
+          <div class="trisplitCol" id="detailChoices">
             <div>
               <input
                 type="checkbox"
@@ -75,8 +75,8 @@
           </div>
         </div>
         <div class="singleCol">
-          <div class="trisplitCol">
-            <button id="btnSave">Save</button>
+          <div class="splitCol">
+            <!-- <button id="btnSave">Save</button> -->
             <button id="btnAdd">Add Expense</button>
             <button id="btnCalc">Calculate</button>
           </div>
