--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       content="script-src 'self' 'unsafe-inline';"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="./content/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+    <link href="./content/fontawesome/css/solid.min.css" rel="stylesheet">
   </head>
 
   <body>
