--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Money Man - A Spending Planner</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline';"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="./content/fontawesome/css/fontawesome.min.css" rel="stylesheet">
-    <link href="./content/fontawesome/css/solid.min.css" rel="stylesheet">
+    <link
+      href="./content/fontawesome/css/fontawesome.min.css"
+      rel="stylesheet"
+    />
+    <link href="./content/fontawesome/css/solid.min.css" rel="stylesheet" />
   </head>
 
   <body>
